refactor: Update branding from 'Energie Hellmann' to 'Ingenieurbüro Hellmann' and refine iSFP delivery timeline descriptions.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Energieberatung Christoph Hellmann in Böblingen – Ihr individueller Sanierungsfahrplan (iSFP) in 2 Wochen. BAFA-zertifiziert, digital & unabhängig.">
-  <meta name="keywords" content="Energieberatung, Böblingen, Stuttgart, Sanierungsfahrplan, iSFP, BAFA, Energieeffizienz, Wärmepumpe">
+  <meta name="description"
+    content="Ingenieurbüro Hellmann in Böblingen – Ihr individueller Sanierungsfahrplan (iSFP) schnell und zuverlässig. BAFA-zertifiziert, digital & unabhängig.">
+  <meta name="keywords"
+    content="Energieberatung, Böblingen, Stuttgart, Sanierungsfahrplan, iSFP, BAFA, Energieeffizienz, Wärmepumpe">
   <meta name="author" content="Christoph Hellmann">
   <title>Energieberatung Hellmann | Ihr Sanierungsfahrplan in Böblingen</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/logo.png">
 </head>
+
 <body>
   <!-- Header -->
   <header class="header">
     <div class="container header__container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Energie Hellmann Logo" class="logo__image">
-        <span class="logo__text">Energie Hellmann</span>
+        <img src="images/logo.png" alt="Ingenieurbüro Hellmann Logo" class="logo__image">
+        <span class="logo__text">Ingenieurbüro Hellmann</span>
       </a>
       <nav class="nav" id="nav">
         <a href="index.html" class="nav__link nav__link--active">Start</a>
@@ -39,11 +43,11 @@
       <div class="hero__content">
         <span class="hero__badge">🏠 Energieeffizienz-Experte</span>
         <h1 class="hero__title">
-          Ingenieur-Energieberatung für <span>Böblingen & Umgebung</span>
+          Energieberatung für <span>Böblingen & Umgebung</span>
         </h1>
         <p class="hero__subtitle">
           Unabhängig. Digital. Schnell.<br>
-          Ihr Sanierungsfahrplan (iSFP) in <strong>2 Wochen statt 2 Monaten</strong> – dank modernster Laser-Vermessung.
+          Ihr Sanierungsfahrplan (iSFP) <strong>schnell und zuverlässig</strong> – dank modernster Laser-Vermessung.
         </p>
         <div class="hero__cta">
           <a href="kontakt.html" class="btn btn--primary btn--large">Jetzt Beratung anfragen</a>
@@ -60,19 +64,27 @@
   <section class="trust-bar">
     <div class="container trust-bar__container">
       <div class="trust-bar__item">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
+        </svg>
         <span>Ingenieur (B.Eng.)</span>
       </div>
       <div class="trust-bar__item">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
+        </svg>
         <span>dena-gelistet</span>
       </div>
       <div class="trust-bar__item">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
+        </svg>
         <span>Unabhängig</span>
       </div>
       <div class="trust-bar__item">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
+        </svg>
         <span>Regional verwurzelt</span>
       </div>
     </div>
@@ -82,19 +94,21 @@
   <section class="section">
     <div class="container">
       <div class="section-header">
-        <h2>Warum Energie Hellmann?</h2>
+        <h2>Warum Ingenieurbüro Hellmann?</h2>
         <p>Profitieren Sie von moderner Technologie und persönlicher Beratung</p>
       </div>
       <div class="features">
         <div class="feature-card">
           <div class="feature-card__icon">⚡</div>
           <h3 class="feature-card__title">Schnell & Digital</h3>
-          <p class="feature-card__text">Dank Laser-Aufmaß und digitaler Prozesskette erhalten Sie Ihren Bericht schneller als üblich.</p>
+          <p class="feature-card__text">Dank Laser-Aufmaß und digitaler Prozesskette erhalten Sie Ihren Bericht
+            schneller als üblich.</p>
         </div>
         <div class="feature-card">
           <div class="feature-card__icon">🎯</div>
           <h3 class="feature-card__title">Fokus auf Wohngebäude</h3>
-          <p class="feature-card__text">Individuelle Sanierungsfahrpläne (iSFP) speziell für Ein- und Zweifamilienhäuser.</p>
+          <p class="feature-card__text">Individuelle Sanierungsfahrpläne (iSFP) speziell für Ein- und
+            Zweifamilienhäuser.</p>
         </div>
         <div class="feature-card">
           <div class="feature-card__icon">✅</div>
@@ -122,25 +136,29 @@
           <div class="process__step">
             <div class="process__step-content">
               <h3 class="process__step-title">Termin vereinbaren</h3>
-              <p class="process__step-text">Kontaktieren Sie mich per Formular, E-Mail oder Telefon. Wir finden schnell einen Termin.</p>
+              <p class="process__step-text">Kontaktieren Sie mich per Formular, E-Mail oder Telefon. Wir finden schnell
+                einen Termin.</p>
             </div>
           </div>
           <div class="process__step">
             <div class="process__step-content">
               <h3 class="process__step-title">Digitales 3D-Aufmaß</h3>
-              <p class="process__step-text">Ich komme vorbei und vermesse Ihr Haus digital mit LiDAR-Scanner & Wärmebildkamera. Dauer: ca. 1-2 Stunden.</p>
+              <p class="process__step-text">Ich komme vorbei und vermesse Ihr Haus digital mit LiDAR-Scanner &
+                Wärmebildkamera. Dauer: ca. 1-2 Stunden.</p>
             </div>
           </div>
           <div class="process__step">
             <div class="process__step-content">
               <h3 class="process__step-title">Ihr Fahrplan</h3>
-              <p class="process__step-text">Nach ca. 2 Wochen erhalten Sie den ausführlichen Beratungsbericht und den iSFP-Ausweis.</p>
+              <p class="process__step-text">Nach wenigen Wochen erhalten Sie den ausführlichen Beratungsbericht und den
+                iSFP-Ausweis.</p>
             </div>
           </div>
           <div class="process__step">
             <div class="process__step-content">
               <h3 class="process__step-title">Förderung erhalten</h3>
-              <p class="process__step-text">Sie reichen die Dokumente bei der BAFA ein und erhalten Ihren Zuschuss direkt auf Ihr Konto.</p>
+              <p class="process__step-text">Sie reichen die Dokumente bei der BAFA ein und erhalten Ihren Zuschuss
+                direkt auf Ihr Konto.</p>
             </div>
           </div>
         </div>
@@ -161,7 +179,7 @@
   <footer class="footer">
     <div class="container footer__container">
       <div>
-        <h4 class="footer__title">Energie Hellmann</h4>
+        <h4 class="footer__title">Ingenieurbüro Hellmann</h4>
         <p>Ihr Energieberater in Böblingen und Umgebung. Unabhängig, digital und schnell.</p>
       </div>
       <div>
@@ -192,4 +210,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
