--- a/kontakt.html
+++ b/kontakt.html
@@ -16,8 +16,8 @@
     <header class="header">
         <div class="container header__container">
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Energie Hellmann Logo" class="logo__image">
-                <span class="logo__text">Energie Hellmann</span>
+                <img src="images/logo.png" alt="Ingenieurbüro Hellmann Logo" class="logo__image">
+                <span class="logo__text">Ingenieurbüro Hellmann</span>
             </a>
             <nav class="nav" id="nav">
                 <a href="index.html" class="nav__link">Start</a>
@@ -52,7 +52,7 @@
                     <form action="https://api.web3forms.com/submit" method="POST" id="contactForm">
                         <input type="hidden" name="access_key" value="e2e262ec-4af7-4dac-acbb-6a5d926ab78a">
                         <input type="hidden" name="subject" value="Neue Anfrage von energie-hellmann.de">
-                        <input type="hidden" name="from_name" value="Energie Hellmann Website">
+                        <input type="hidden" name="from_name" value="Ingenieurbüro Hellmann Website">
                         <input type="hidden" name="redirect"
                             value="https://energie-hellmann.de/kontakt.html?success=true">
 
@@ -167,7 +167,7 @@
     <footer class="footer">
         <div class="container footer__container">
             <div>
-                <h4 class="footer__title">Energie Hellmann</h4>
+                <h4 class="footer__title">Ingenieurbüro Hellmann</h4>
                 <p>Ihr Energieberater in Böblingen und Umgebung. Unabhängig, digital und schnell.</p>
             </div>
             <div>
