--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -16,8 +16,8 @@
     <header class="header">
         <div class="container header__container">
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Energie Hellmann Logo" class="logo__image">
-                <span class="logo__text">Energie Hellmann</span>
+                <img src="images/logo.png" alt="Ingenieurbüro Hellmann Logo" class="logo__image">
+                <span class="logo__text">Ingenieurbüro Hellmann</span>
             </a>
             <nav class="nav" id="nav">
                 <a href="index.html" class="nav__link">Start</a>
@@ -90,7 +90,7 @@
                     <ul style="list-style: none; padding: 0;">
                         <li style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
                             <span style="color: var(--color-primary); font-size: 1.5rem;">✓</span>
-                            <span><strong>Keine langen Wartelisten</strong> – Ihr Bericht in ca. 2 Wochen</span>
+                            <span><strong>Keine langen Wartelisten</strong> – Ihr Bericht zeitnah fertig</span>
                         </li>
                         <li style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
                             <span style="color: var(--color-primary); font-size: 1.5rem;">✓</span>
@@ -173,7 +173,7 @@
     <footer class="footer">
         <div class="container footer__container">
             <div>
-                <h4 class="footer__title">Energie Hellmann</h4>
+                <h4 class="footer__title">Ingenieurbüro Hellmann</h4>
                 <p>Ihr Energieberater in Böblingen und Umgebung. Unabhängig, digital und schnell.</p>
             </div>
             <div>
