feat: Update academic qualifications and professional titles across the website to include Wirtschaftsingenieur and M.A. Digital Business Management.

--- a/impressum.html
+++ b/impressum.html
@@ -55,7 +55,7 @@
 
                 <h2 style="margin-top: 2rem;">Berufsbezeichnung und berufsrechtliche Regelungen</h2>
                 <p>
-                    Berufsbezeichnung: Ingenieur (B.Eng.)<br>
+                    Berufsbezeichnung: Wirtschaftsingenieur (B.Eng.), M.A. Digital Business Management<br>
                     Verliehen in: Bundesrepublik Deutschland
                 </p>
                 <p>
