--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
           <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
         </svg>
-        <span>Ingenieur (B.Eng.)</span>
+        <span>Ingenieur (B.Eng. / M.A.)</span>
       </div>
       <div class="trust-bar__item">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
