--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Christoph Hellmann – Ihr Energieberater aus Böblingen. Ingenieur (B.Eng.), dena-zertifiziert, spezialisiert auf Wohngebäude.">
+        content="Christoph Hellmann – Ihr Energieberater aus Böblingen. Wirtschaftsingenieur (B.Eng.) & M.A. Digital Business Management, dena-zertifiziert, spezialisiert auf Wohngebäude.">
     <title>Über mich | Energieberatung Hellmann</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/logo.png">
@@ -44,8 +44,10 @@
                 <div class="profile__content">
                     <h1>Über mich – Ihr Energieberater aus Böblingen</h1>
                     <p style="font-size: 1.1rem; margin-bottom: 1.5rem;">
-                        Mein Name ist Christoph Hellmann. Als Ingenieur (B.Eng.) verbinde ich technische Präzision mit
-                        praxisnaher Beratung. Mein Ziel: Ihnen einen klaren, umsetzbaren Plan für die energetische
+                        Mein Name ist Christoph Hellmann. Als Wirtschaftsingenieur (B.Eng.) mit Master in Digital
+                        Business Management verbinde ich technische Präzision mit
+                        modernem, digitalem Arbeiten. Mein Ziel: Ihnen einen klaren, umsetzbaren Plan für die
+                        energetische
                         Sanierung Ihres Hauses zu geben – ohne Fachchinesisch.
                     </p>
 
@@ -53,7 +55,11 @@
                     <div class="profile__qualifications">
                         <div class="profile__qualification">
                             <span class="profile__qualification-icon">🎓</span>
-                            <span>Bachelor of Engineering (B.Eng.)</span>
+                            <span>B.Eng. Wirtschaftsingenieurwesen</span>
+                        </div>
+                        <div class="profile__qualification">
+                            <span class="profile__qualification-icon">💻</span>
+                            <span>M.A. Digital Business Management</span>
                         </div>
                         <div class="profile__qualification">
                             <span class="profile__qualification-icon">📋</span>
