refactor: Adjust pricing and payment descriptions on leistungen page for flexibility.

--- a/leistungen.html
+++ b/leistungen.html
@@ -100,8 +100,8 @@
                         </div>
                         <div class="price-box__body">
                             <div class="price-box__row">
-                                <span>Mein Honorar (Festpreis)</span>
-                                <span>1.900 €</span>
+                                <span>Mein Honorar</span>
+                                <span>ab 1.900 €</span>
                             </div>
                             <div class="price-box__row price-box__row--discount">
                                 <span>BAFA-Zuschuss (50%, max. 650 €)</span>
@@ -109,15 +109,15 @@
                             </div>
                             <div class="price-box__row">
                                 <span>Ihr Eigenanteil</span>
-                                <span>1.250 €</span>
+                                <span>ab 1.250 €</span>
                             </div>
                         </div>
                         <div class="price-box__footer">
                             <p>Alle Preise in Euro. Als Kleinunternehmer gemäß § 19 UStG weise ich keine Umsatzsteuer
                                 aus.</p>
                             <p style="margin-top: 0.5rem;"><strong>Zahlungsmodalitäten:</strong> Sie erhalten eine
-                                Rechnung über den vollen Betrag (1.900 €), zahlbar nach Erhalt des Berichts. Nach
-                                Prüfung durch das BAFA erhalten Sie den Zuschuss (650 €) direkt auf Ihr Konto erstattet.
+                                Rechnung über den Gesamtbetrag, zahlbar nach Erhalt des Berichts. Nach
+                                Prüfung durch das BAFA erhalten Sie den Zuschuss direkt auf Ihr Konto erstattet.
                             </p>
                         </div>
                     </div>
