Update: iSFP-Bonus Hinweis entfernt & Rundum-Sorglos-Paket fuer Heizungsbauer hinzugefuegt

--- a/leistungen.html
+++ b/leistungen.html
@@ -62,8 +62,8 @@
                             <span style="color: var(--color-primary); font-size: 1.5rem;">✓</span>
                             <div>
                                 <strong>5% iSFP-Bonus</strong><br>
-                                <span style="color: var(--color-gray-600);">auf alle Sanierungsmaßnahmen (Heizung,
-                                    Dämmung, Fenster)</span>
+                                <span style="color: var(--color-gray-600);">auf Maßnahmen an der Gebäudehülle (Dach,
+                                    Fenster, Dämmung)</span>
                             </div>
                         </li>
                         <li style="display: flex; align-items: flex-start; gap: 0.75rem; margin-bottom: 1rem;">
@@ -183,8 +183,10 @@
 
             <div style="max-width: 800px; margin: 0 auto; text-align: center;">
                 <p style="font-size: 1.1rem; margin-bottom: 1.5rem;">
-                    Sie installieren Wärmepumpen, sanieren Dächer oder tauschen Fenster? Ich liefere den passenden iSFP
-                    inkl. <strong>5% Förder-Bonus</strong> (iSFP-Bonus) für Ihre Kunden.
+                    Sie sanieren Dächer oder tauschen Fenster? Ich liefere den passenden iSFP inkl. <strong>5%
+                        Förder-Bonus</strong>
+                    für Ihre Kunden. Für Heizungsbauer: Das <strong>"Rundum-Sorglos-Paket"</strong> (iSFP + Heizlast +
+                    hydraulischer Abgleich) – technisch perfekt vorbereitete Baustellen für Sie.
                 </p>
 
                 <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap; margin-bottom: 2rem;">
