feat: Update contact phone number and add WhatsApp chat links across all pages.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
         <h4 class="footer__title">Kontakt</h4>
         <p>Christoph Hellmann<br>Zeisigweg 17/2<br>71032 Böblingen</p>
         <p class="mt-2">
-          <a href="tel:+4915123307365" class="footer__link">📞 0151 23307365</a>
+          <a href="tel:+4915203826121" class="footer__link">📞 0152 / 038 26 121</a>
+          <a href="https://wa.me/4915203826121" target="_blank" class="footer__link">💬 WhatsApp Chat</a>
           <a href="mailto:kontakt@energie-hellmann.de" class="footer__link">📧 kontakt@energie-hellmann.de</a>
         </p>
       </div>
