--- a/impressum.html
+++ b/impressum.html
@@ -49,7 +49,8 @@
 
                 <h2 style="margin-top: 2rem;">Kontakt</h2>
                 <p>
-                    Telefon: <a href="tel:+4915123307365">0151 23307365</a><br>
+                    Telefon: <a href="tel:+4915203826121">0152 / 038 26 121</a><br>
+                    WhatsApp: <a href="https://wa.me/4915203826121" target="_blank">0152 / 038 26 121</a><br>
                     E-Mail: <a href="mailto:kontakt@energie-hellmann.de">kontakt@energie-hellmann.de</a>
                 </p>
 
@@ -156,7 +157,8 @@
                 <h4 class="footer__title">Kontakt</h4>
                 <p>Christoph Hellmann<br>Zeisigweg 17/2<br>71032 Böblingen</p>
                 <p class="mt-2">
-                    <a href="tel:+4915123307365" class="footer__link">📞 0151 23307365</a>
+                    <a href="tel:+4915203826121" class="footer__link">📞 0152 / 038 26 121</a>
+                    <a href="https://wa.me/4915203826121" target="_blank" class="footer__link">💬 WhatsApp Chat</a>
                     <a href="mailto:kontakt@energie-hellmann.de" class="footer__link">📧 kontakt@energie-hellmann.de</a>
                 </p>
             </div>
