docs: Add professional liability insurance details and update legal content heading in impressum.html.

--- a/impressum.html
+++ b/impressum.html
@@ -65,12 +65,24 @@
                         rel="noopener noreferrer">www.energie-effizienz-experten.de</a>
                 </p>
 
+                <h2 style="margin-top: 2rem;">Angaben zur Berufshaftpflichtversicherung</h2>
+                <p>
+                    <strong>Name und Sitz des Versicherers:</strong><br>
+                    Hiscox SA, Niederlassung für Deutschland<br>
+                    Arnulfstraße 31<br>
+                    80636 München
+                </p>
+                <p>
+                    <strong>Geltungsbereich der Versicherung:</strong><br>
+                    Deutschland (und ggf. weitere vereinbarte Länder)
+                </p>
+
                 <h2 style="margin-top: 2rem;">Umsatzsteuer</h2>
                 <p>
                     Kleinunternehmer gemäß § 19 UStG. Es wird keine Umsatzsteuer berechnet und ausgewiesen.
                 </p>
 
-                <h2 style="margin-top: 2rem;">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+                <h2 style="margin-top: 2rem;">Verantwortlich für redaktionelle Inhalte nach § 18 Abs. 2 MStV</h2>
                 <p>
                     Christoph Hellmann<br>
                     Zeisigweg 17/2<br>
